1. fixed broken image path for home image 2. I believe I fixed the bg overlay issues (height: 0; wtf?) 3. line-height: with hero header and hero text on small devices. Still need to figure out margin issue on logo but cannot replicate in webmater tools)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -486,29 +486,41 @@ aside .form-group {
   justify-content: center;
   width: 100%;
   height: 450px;
-  background:
-  linear-gradient(
-      rgba(0, 0, 0, .5),
-      rgba(0, 0, 0, .5)
-    ),
-  url(placeholder.jpg);
+  background-image: image-url("placeholder.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   opacity: .95;
   text-shadow: 1px 2px 2px #000;
+  position: relative;
+  z-index: 1;
+}
+
+.hero::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: .6;
+  z-index: 2;
 }
 
 #hero-text {
   text-align: center;
   width: 80%;
   margin: 0 auto;
+  position: relative;
+  z-index: 3;
 }
 
 #hero-header {
   font-size: 59px;
   line-height: 70px;
   margin-bottom: 0;
+  z-index: 3;
 }
 
 #hero-description {
@@ -526,6 +538,7 @@ aside .form-group {
 @media screen and (max-width: 985px) {
   #hero-header {
     font-size: 44px;
+    line-height: 43px;
   }
   #hero-description {
     font-size: 16px;
@@ -541,7 +554,7 @@ aside .form-group {
   }
   #hero-description {
     font-size: 16px;
-    line-height: 25px;
+    line-height: 18px;
     width: 95%;
   }
 }
@@ -926,7 +939,7 @@ footer h3 {
   content: "";
   position: absolute;
   left: 0;
-  height: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   background-color: black;
